--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 0 0.5rem;
   font-family: 'Roboto', sans-serif;
   background-color: #ffffff;
 }
@@ -14,4 +14,20 @@ a {
 
 a:visited {
   color: #000000;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  gap: 2rem;
+  padding: 1rem 0 1rem 0;
+  border-bottom: 3px solid #000000;
+}
+#logos {
+  display: flex;
+  height: 10vh;
+  justify-content: left;
+  padding: 1rem 0;
+  border-bottom: 3px solid #000000;
 }
