--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ header {
   padding: 1rem 0 1rem 0;
   border-bottom: 3px solid #000000;
 }
+
 .logos {
   display: flex;
   height: 10vh;
@@ -32,11 +33,8 @@ header {
   padding: 1rem 0;
   border-bottom: 3px solid #000000;
 }
-.research-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 2rem;
+
+.app-research-list{
   padding: 1rem 0;
   border-bottom: 3px solid #000000;
 }
@@ -50,12 +48,18 @@ footer {
 
 
 // RESEARCH LIST
+.research-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
 .research-item {
   width: 22vw;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  border: 1px solid #000000;
+  background-color: aliceblue;
 }
 
 h2 {
