Add sections RC and FFA expositions, current and previous projects - in future these could be split into separate components - these components would be children of the research-list - research-list would make the request, then sort data and send it into the 4 children

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,11 +34,6 @@ header {
   border-bottom: 3px solid #000000;
 }
 
-.app-research-list{
-  padding: 1rem 0;
-  border-bottom: 3px solid #000000;
-}
-
 footer {
   display: flex;
   flex-direction: row;
@@ -48,6 +43,14 @@ footer {
 
 
 // RESEARCH LIST
+.rc-expositions,
+.ffa-expositions,
+.projects-current,
+.projects-previous {
+  padding: 1rem 0;
+  border-bottom: 3px solid #000000;
+}
+
 .research-list {
   display: flex;
   flex-direction: row;
