--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,16 @@ footer {
   width: 22vw;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+}
+
+.research-item {
+  transition: filter 0.5s ease-in-out;
+}
+
+.research-item:hover ~ .research-item,
+.research-item:has(~ .research-item:hover) {
+  filter: blur(1.7px);
 }
 
 .research-item .details {
