Add ISSN subtitle

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,11 +16,12 @@ a:visited {
   color: #000000;
 }
 
-h2 {
+h2, .subtitle {
   margin: 0;
   font-size: 1.1rem;
   font-weight: 600;
   color: #333;
+  margin: 0.1rem;
 }
 
 // GENERAL
