--- a/projects/portal/src/styles.scss
+++ b/projects/portal/src/styles.scss
@@ -1,202 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-
-$black: #000000;
-$grey: #666666;
-$white: #ffffff;
-
-body {
-  margin: 0;
-  padding: 0 2rem;
-  font-family: 'Roboto', sans-serif;
-  background-color: $white;
-}
-
-a {
-  text-decoration: none;
-  color: #000000;
-}
-
-a:visited {
-  color: #000000;
-}
-
-h2, .subtitle {
-  margin: 0;
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: $black;
-  margin: 0.1rem;
-}
-
-// GENERAL
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  gap: 5rem;
-  padding: 1rem 0 1rem 0;
-  border-bottom: 3px solid #000000;
-}
-header a {
-  color: $grey;
-}
-header a:visited {
-  color: $grey;
-}
-
-.logos {
-  display: flex;
-  height: 6rem;
-  justify-content: left;
-  padding: 1rem 0;
-  border-bottom: 3px solid #000000;
-}
-.logos > img {
-  padding: 0 1rem;
-  border-right: 3px solid #000000;
-}
-.logos :first-child {
-  padding-left: 0;
-}
-.logos :last-child {
-  padding-left: 1rem;
-  padding-right: 0;
-  border-right: unset;
-}
-
-// FOOTER
-
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 2rem;
-  padding: 1rem 0;
-}
-footer .small {
-  height: 3rem;
-  border-bottom: unset;
-}
-footer .contact {
-  margin-bottom: 1rem; 
-  display: flex;
-  color: $grey;
-  gap: 4rem;
-  align-items: end;
-}
-footer .contact a, footer .contact a:visited {
-  color: $grey;
-}
-
-// RESEARCH LIST
-.rc-expositions,
-.ffa-expositions,
-.projects-current,
-.projects-previous {
-  padding: 1rem 0;
-  border-bottom: 3px solid #000000;
-}
-
-.research-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-
-.research-item {
-  width: 22vw;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-// FILTER WHICH AFFECTS ELEMENTS WHICH ARE NOT HOVERED
-//.research-item {
-//  transition: filter 0.5s ease-in-out;
-//}
-//.research-item:hover ~ .research-item,
-//.research-item:has(~ .research-item:hover) {
-//  filter: blur(1.7px);
-//}
-
-.research-item .details {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.research-item .bottom {
-  margin-top: auto;
-}
-
-h3{
-  font-size: unset;
-  font-weight: unset;
-  margin: 1rem 0 0.5rem 0;
-}
-
-.research-list p {
-  margin: 0.5rem 0;
-}
-
-.keywords {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;   
-  gap: 0.5rem;
-  padding: 1rem 0;
-  border-bottom: 3px solid #000000;
-}
-
-.keyword {
-  line-height: 1.2;
-  display: inline-block;
-  padding: 0 0.2em;
-}
-
-.read-more {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background: #007bff;
-  color: white;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background 0.2s;
-}
-
-.read-more:hover {
-  background: #0056b3;
-}
-
-.thumbnail {
-  width: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
-
-// RESEARCH-ITEM 
-.article-title {
-  font-weight: 600;
-  color: #000000;
-}
-
-.section-title {
-  margin-bottom: 1rem;
-}
-
-.author, .where, .abstract {
-  color: $grey;
-}
-
-@media (max-width: 768px) {
-  .research-item {
-    grid-template-columns: 1fr;
-  }
-
-  .thumbnail {
-    width: 100%;
-    height: 200px;
-  }
-}
+@import '../../../shared/src/styles.scss';
