Fix padding on article details

--- a/projects/journal/src/app/pages/detail/detail.component.scss
+++ b/projects/journal/src/app/pages/detail/detail.component.scss
@@ -22,7 +22,7 @@ header {
     margin: 2rem 0;
     gap: 1.5rem;
     display: flex;
-    padding: 1rem;
+    padding: 1rem 0;
     border-bottom: 3px solid #000000;
 }
 
