Init styling for the journal home page

--- a/shared/styles.scss
+++ b/shared/styles.scss
@@ -92,7 +92,9 @@ footer .contact a, footer .contact a:visited {
 .rc-expositions,
 .ffa-expositions,
 .projects-current,
-.projects-previous {
+.projects-previous,
+.research-expositions,
+.research-reports {
   padding: 1rem 0;
   border-bottom: 3px solid #000000;
 }
