--- a/shared/styles.scss
+++ b/shared/styles.scss
@@ -202,3 +202,14 @@ h3{
     height: 200px;
   }
 }
+
+.bordered {
+  border-bottom: 3px solid #000000;
+}
+
+.editorial {
+  max-width: 1200px;
+  font-size: 1.2rem;
+  padding: 2rem 0 1.5rem 0;
+  line-height: 22px;
+}
