--- a/shared/styles.scss
+++ b/shared/styles.scss
@@ -11,6 +11,14 @@ body {
   background-color: $white;
 }
 
+// APP-WIDE
+app-journal, app-portal {
+  min-height: 100vh;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 a {
   text-decoration: none;
   color: #000000;
@@ -65,7 +73,6 @@ header a:visited {
 }
 
 // FOOTER
-
 footer {
   display: flex;
   flex-direction: row;
